--- a/Supervised Learning/Neural Networks/neural_networks.ipynb
+++ b/Supervised Learning/Neural Networks/neural_networks.ipynb
@@ -332,6 +332,18 @@
     "plt.imshow(np.fliplr(np.rot90(test_X[i].reshape(28, 28), k=-1)), cmap=\"gray\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94db9d37",
+   "metadata": {},
+   "source": [
+    "## Results\n",
+    "\n",
+    "The model works quite well especuially given how hard of a dataset I though it was. There are images where without knowing the lable I couldnt ditsintinguish between a m or a n where the writer got extra fancy with lines hanging the beginning of the character. And that raises an important point, does the model need to be perfect? If even humans cannot always distinguish the right answer for a human written letter, it makes the error of a neural network more understandable. \n",
+    "\n",
+    "Additionally, when running the above cell repeatedly to test the model I noticed that it tends to have more error than the dataset with just numbers, and I think this is due to much more options. Both because there are 26 letters and only 10 digits, but also because the model does not distinguish between capital and lowercase letters. The model must learn to assign essentially two different characters to the same output, so there are really 52 different groups compared to only 10 in the numbers dataset."
+   ]
   }
  ],
  "metadata": {
