--- a/Supervised Learning/K Nearest Neighbors/k_nearest_neightbors.ipynb
+++ b/Supervised Learning/K Nearest Neighbors/k_nearest_neightbors.ipynb
@@ -111,14 +111,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "50e4e220",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
+    "from sklearn.metrics import confusion_matrix\n",
     "\n",
     "# Split the dataset into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
@@ -253,6 +253,16 @@
     "plt.ylabel('Classification Error', fontsize = 14)\n",
     "plt.xticks(possible_k)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b94b118a",
+   "metadata": {},
+   "source": [
+    "### Discussion\n",
+    "\n",
+    "There is not a good method for determining the optimal k, even testing many different k's to comapre their classification error give inconclusive results as seen in the image above. Many k-values will give good results, and it ends up being more of a descion about how we want the model to behave, not what k is the absolute best. A small k can allow for more intricate classification baoundaries, which might be necessary if the dataset is actually that complicated as a large k-value would swallow up smaller outposts into the larger blob. However, this also makes it more prone to overfitting, susceptible to outliers, and less robust overall. A large k-value smooths the boundaries between groups, making the classifications more cohesive instead of scattered about. In general, we like more robust solutions so a large k-value tends to be better, but we must remember this comes at the cost of losing some level of detail. "
    ]
   }
  ],
