--- a/Unsupervised Learning/DBSCAN/DBSCAN.ipynb
+++ b/Unsupervised Learning/DBSCAN/DBSCAN.ipynb
@@ -9,22 +9,22 @@
     "\n",
     "DBSCAN (Density-Based Spatial Clustering of Applications with Noise) is a popular clustering algorithm used in machine learning and data analysis. It is particularly effective for identifying clusters of varying shapes and sizes in datasets with noise.\n",
     "\n",
-    "## Key Features:\n",
+    "### Key Features:\n",
     "- **Density-Based Clustering**: DBSCAN groups points that are closely packed together, marking points in low-density regions as outliers.\n",
     "- **No Predefined Number of Clusters**: Unlike k-means, DBSCAN does not require the number of clusters to be specified beforehand.\n",
     "- **Handles Noise**: It can identify and exclude noise points (outliers) from the clusters.\n",
     "\n",
-    "## How It Works:\n",
+    "### How It Works:\n",
     "1. **Core Points**: A point is considered a core point if it has at least `min_samples` points (including itself) within a specified radius (`eps`).\n",
     "2. **Reachable Points**: A point is directly reachable from a core point if it lies within the `eps` radius of the core point.\n",
     "3. **Clusters Formation**: DBSCAN starts with an arbitrary point and expands clusters by iteratively including reachable points. If a point is not reachable from any core point, it is classified as noise.\n",
     "\n",
-    "DBSCAN is widely used in applications such as anomaly detection, image segmentation, and geospatial data analysis. It is particularly useful when the dataset contains clusters of arbitrary shapes or when the number of clusters is unknown."
+    "DBSCAN is widely used in applications such as anomaly detection and image segmentation. It is particularly useful when the dataset contains clusters of arbitrary shapes or when the number of clusters is unknown."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "4b6c25ec",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,6 @@
     "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "import seaborn as sns"
    ]
   },
@@ -65,6 +64,24 @@
     "# so our lable is the class column,\n",
     "y = D['class'].to_numpy()\n",
     "X = D[['area', 'asymmetry']].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fba6fc55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10, 8))\n",
+    "plt.title(\"Seed Data\", fontsize=18)\n",
+    "plt.scatter(X[y == 1, 0], X[y == 1, 1], c='blue', label='Variety 1')\n",
+    "plt.scatter(X[y == 2, 0], X[y == 2, 1], c='red', label='Variety 2')\n",
+    "plt.scatter(X[y == 3, 0], X[y == 3, 1], c='black', label='Variety 3')\n",
+    "plt.xlabel(\"Area\", fontsize=15)\n",
+    "plt.ylabel(\"Astmmetry\", fontsize=15)\n",
+    "plt.legend(fontsize=12)\n",
+    "plt.show()"
    ]
   },
   {
@@ -121,9 +138,9 @@
    "source": [
     "### Analysis of DBSCAN Results\n",
     "\n",
-    "The DBSCAN algorithm struggles significantly with this dataset due to the high degree of overlap between the groups. While it successfully identifies the distinct clusters, this comes at the cost of a large amount of outliers otherwise the gorups would be connected by core points. This limitation arises because DBSCAN relies on density-based clustering, which becomes less effective when clusters have overlapping densities.\n",
+    "The DBSCAN algorithm struggles significantly with this dataset due to the high degree of overlap between the groups. While it successfully identifies the distinct clusters, this comes at the cost of a large amount of outliers, otherwise the groups would be connected by core points and get classified as one group. This limitation arises because DBSCAN relies on density-based clustering, which becomes less effective when clusters have overlapping densities.\n",
     "\n",
-    "There is a large number of points classified as noise or outliers. DBSCAN marks these points as such because they reside in low-density regions and do not meet the minimum density requirements (`min_samples`) within the specified radius (`eps`). This behavior highlights DBSCAN's sensitivity to parameter tuning and its inability to handle datasets with overlapping clusters effectively. \n",
+    "There are a large number of points classified as noise or outliers. DBSCAN marks these points as such because they reside in low-density regions and do not meet the minimum density requirements (`min_samples`) within the specified radius (`eps`). This behavior highlights DBSCAN's sensitivity to parameter tuning and its inability to handle datasets with overlapping clusters effectively. \n",
     "\n",
     "In summary, while DBSCAN is a powerful clustering algorithm for datasets with well-separated clusters and varying shapes, it is less suitable for datasets like this one, where clusters overlap significantly and density variations are minimal."
    ]
