--- a/Unsupervised Learning/Principle Component Analysis/principle_component_analysis.ipynb
+++ b/Unsupervised Learning/Principle Component Analysis/principle_component_analysis.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 11,
    "id": "ede46532",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 12,
    "id": "81a9d570",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 13,
    "id": "98c305b3",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 14,
    "id": "dd786bf8",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 15,
    "id": "76f399d6",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
        "length_of_kernel_groove -0.003723 -0.034498  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,8 +285,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "571df9fc",
+   "metadata": {},
+   "source": [
+    "### Importance of Variables\n",
+    "\n",
+    "Looking at the above table we see the coeficients of the data for each principle component. This also shows us how 'important' each data type is. We can see the 'area', 'length_of_kernel_groove', and 'asymmetry' all have large coefficients for the first two principle components. Since the first two PCs make up 89% of the model variance, it means that these data types are the most important to the model."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 16,
    "id": "ae9f5269",
    "metadata": {},
    "outputs": [
@@ -453,7 +463,7 @@
        "[210 rows x 7 columns]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 17,
    "id": "3dc331da",
    "metadata": {},
    "outputs": [
@@ -663,7 +673,7 @@
        "[210 rows x 8 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 18,
    "id": "9cdae1aa",
    "metadata": {},
    "outputs": [
@@ -714,16 +724,16 @@
    "id": "712a3390",
    "metadata": {},
    "source": [
-    "### Compared To just 2 data dimensions\n",
+    "### Compared To 2 Normal Data Types\n",
     "\n",
-    "Area and Asymmetry\n",
+    "The plot of Area and Asymmetry is seen below, while the principle component plot is shown above.\n",
     "\n",
-    "The clusters are slightly more separated, but it is not a major difference. This is largely due to the Asymmetry data being the most imortant, with it having the largest weights for PC1 and PC2. If we replace Asymmetry with a less important value like length_of_kernel we see that the data collapses down to a stright line. So the PC1 and PC2 __are__ representing the components with the most variance."
+    "The clusters are slightly more separated in the principle component plot, but it is barely noticible. This is largely due to the Asymmetry data being an imortant data type, with it having a large influence on PC1 and PC2. If we replace Asymmetry with a less important value like length_of_kernel we see that the data collapses down to a straight line (2 plots down). So the PC1 and PC2 __are__ representing the components with the most variance."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 19,
    "id": "80d7f30e",
    "metadata": {},
    "outputs": [
@@ -752,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 20,
    "id": "8058ea58",
    "metadata": {},
    "outputs": [
@@ -788,7 +798,7 @@
    "source": [
     "### Direct Relationship\n",
     "\n",
-    "The data above is tightly fitted to a single, straight line. What this means is that there is no new information that is gained from having both pf these data values. If you know the perimeter, you effectively know the length of the kernel. This is the data the PCA reduces, eliminating redundancies that make the model more expensive to solve."
+    "The data above is tightly fitted to a single, straight line. This means that there is very little new information that is gained from having both of these data values. If you know the perimeter, you effectively know the length of the kernel. This is the data that PCA reduces, eliminating redundancies that make the model more expensive to solve."
    ]
   }
  ],
