--- a/Unsupervised Learning/Principle Component Analysis/principle_component_analysis.ipynb
+++ b/Unsupervised Learning/Principle Component Analysis/principle_component_analysis.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "id": "ede46532",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "id": "81a9d570",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "id": "98c305b3",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "id": "dd786bf8",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "id": "76f399d6",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
        "length_of_kernel_groove -0.003723 -0.034498  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,14 +289,14 @@
    "id": "571df9fc",
    "metadata": {},
    "source": [
-    "### Importance of Variables\n",
+    "# Importance of Variables\n",
     "\n",
     "Looking at the above table we see the coeficients of the data for each principle component. This also shows us how 'important' each data type is. We can see the 'area', 'length_of_kernel_groove', and 'asymmetry' all have large coefficients for the first two principle components. Since the first two PCs make up 89% of the model variance, it means that these data types are the most important to the model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "id": "ae9f5269",
    "metadata": {},
    "outputs": [
@@ -463,7 +463,7 @@
        "[210 rows x 7 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "id": "3dc331da",
    "metadata": {},
    "outputs": [
@@ -673,7 +673,7 @@
        "[210 rows x 8 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "id": "9cdae1aa",
    "metadata": {},
    "outputs": [
@@ -724,7 +724,7 @@
    "id": "712a3390",
    "metadata": {},
    "source": [
-    "### Compared To 2 Normal Data Types\n",
+    "# Comparison To Normal Data Types\n",
     "\n",
     "The plot of Area and Asymmetry is seen below, while the principle component plot is shown above.\n",
     "\n",
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "id": "80d7f30e",
    "metadata": {},
    "outputs": [
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "id": "8058ea58",
    "metadata": {},
    "outputs": [
@@ -796,7 +796,7 @@
    "id": "fafe0923",
    "metadata": {},
    "source": [
-    "### Direct Relationship\n",
+    "# Direct Relationship\n",
     "\n",
     "The data above is tightly fitted to a single, straight line. This means that there is very little new information that is gained from having both of these data values. If you know the perimeter, you effectively know the length of the kernel. This is the data that PCA reduces, eliminating redundancies that make the model more expensive to solve."
    ]
