--- a/Unsupervised Learning/SVD Compression/singular_value_decomposition.ipynb
+++ b/Unsupervised Learning/SVD Compression/singular_value_decomposition.ipynb
@@ -358,13 +358,15 @@
    "source": [
     "## Comments:\n",
     "\n",
-    "It is very clear that the issue with compressing the San Marino flag is the compex seal in the center of it. All the innaccuracies of the model in the 50 value and 150 value compressions are a kaleidoscope effect on the white background around the seal. \n",
+    "It is very clear that the issue with compressing the San Marino flag is the complex seal in the center of it. All the inaccuracies of the model in the 50 value and 150 value compressions are a kaleidoscope effect on the white background around the seal. \n",
     "\n",
-    "For it to be fully represented with SVD, it requiers 300 out of 600 singular values, this means there is no actual benefit to the compression as U and V are only reduced to half the original matrix size, so the two of them store the same amount of values as the original matrix.\n",
+    "For it to be fully represented with SVD, it requires 300 out of 600 singular values, this means there is no actual benefit to the compression as U and V are only reduced to half the original matrix size, so the two of them store the same amount of values as the original matrix.\n",
     "\n",
-    "It is very interesting that this is the case given how sharp the drop in value is as singular values decrease. But this is mae clear when we plot the values again but without the 100 largest singular values. \n",
+    "It is very interesting that this is the case given how sharp the drop in value is along the singular values; a few dominate values should closely represent the entire matrix, and the later ones should have no effect. But the answer is made clear when we plot the singluar values again but without the 100 largest singular values. \n",
     "\n",
-    "As seen below, after 300, the singular values are 0, there is no new data to be gained from them. It seems that even the small singualr values in the 150-300 range have enough of an impact to make the image look like static."
+    "As seen below, after 300, the singular values are 0, there is no new data to be gained from them. It seems that even the small singular values in the 150-300 range have enough of an impact to make the image look like static near the seal. \n",
+    "\n",
+    "The other cause of it is that mistakes are more visible on a white background. We can see on the 50-value model that the box of error continues into the blue field, it is just less visible on that background."
    ]
   },
   {
