--- a/Unsupervised Learning/SVD Compression/singular_value_decomposition.ipynb
+++ b/Unsupervised Learning/SVD Compression/singular_value_decomposition.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "id": "e6e65519",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "id": "8b51a769",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "id": "9d6d3f85",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "id": "37f4f7de",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 49,
    "id": "bff4b376",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 50,
    "id": "cbead16b",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "id": "c6455a37",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
    "id": "87a64913",
    "metadata": {},
    "outputs": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 53,
    "id": "2242f7b9",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
    "id": "38181fda",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 55,
    "id": "4e30226c",
    "metadata": {},
    "outputs": [
@@ -364,14 +364,14 @@
     "\n",
     "It is very interesting that this is the case given how sharp the drop in value is along the singular values; a few dominate values should closely represent the entire matrix, and the later ones should have no effect. But the answer is made clear when we plot the singluar values again but without the 100 largest singular values. \n",
     "\n",
-    "As seen below, after 300, the singular values are 0, there is no new data to be gained from them. It seems that even the small singular values in the 150-300 range have enough of an impact to make the image look like static near the seal. \n",
+    "As seen below, after 300, the singular values are essentially 0, there is no new data to be gained from them. It seems that even the small singular values in the 150-300 range have enough of an impact to make the image look like static near the seal, while the zero values naturally do not. \n",
     "\n",
     "The other cause of it is that mistakes are more visible on a white background. We can see on the 50-value model that the box of error continues into the blue field, it is just less visible on that background."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 56,
    "id": "048775b0",
    "metadata": {},
    "outputs": [
