--- a/Unsupervised Learning/Principle Component Analysis/principle_component_analysis.ipynb
+++ b/Unsupervised Learning/Principle Component Analysis/principle_component_analysis.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 71,
    "id": "ede46532",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 72,
    "id": "81a9d570",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 73,
    "id": "98c305b3",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 74,
    "id": "dd786bf8",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 75,
    "id": "76f399d6",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
        "length_of_kernel_groove -0.003723 -0.034498  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,12 +291,12 @@
    "source": [
     "# Importance of Variables\n",
     "\n",
-    "Looking at the above table we see the coeficients of the data for each principle component. This also shows us how 'important' each data type is. We can see the 'area', 'length_of_kernel_groove', and 'asymmetry' all have large coefficients for the first two principle components. Since the first two PCs make up 89% of the model variance, it means that these data types are the most important to the model."
+    "Looking at the above table we see the coeficients of the data for each principle component. This also shows us how 'important' each data type is. We can see that 'area', 'length_of_kernel_groove', and 'asymmetry' all have large coefficients for the first two principle components. Since the first two PCs make up 89% of the model variance, it means that these data types are the most important to the model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 76,
    "id": "ae9f5269",
    "metadata": {},
    "outputs": [
@@ -463,7 +463,7 @@
        "[210 rows x 7 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 77,
    "id": "3dc331da",
    "metadata": {},
    "outputs": [
@@ -673,7 +673,7 @@
        "[210 rows x 8 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 78,
    "id": "9cdae1aa",
    "metadata": {},
    "outputs": [
@@ -728,12 +728,12 @@
     "\n",
     "The plot of Area and Asymmetry is seen below, while the principle component plot is shown above.\n",
     "\n",
-    "The clusters are slightly more separated in the principle component plot, but it is barely noticible. This is largely due to the Asymmetry data being an imortant data type, with it having a large influence on PC1 and PC2. If we replace Asymmetry with a less important value like length_of_kernel we see that the data collapses down to a straight line (2 plots down). So the PC1 and PC2 __are__ representing the components with the most variance."
+    "The clusters are slightly more separated in the principle component plot, but it is barely noticible. This is largely due to the Asymmetry data being an imortant data type, with it having a large influence on PC1 and PC2. If we replace Asymmetry with a less important value like length_of_kernel we see that the data collapses down to a straight line (2 plots down). So PC1 and PC2 __are__ representing the components with the most variance."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 79,
    "id": "80d7f30e",
    "metadata": {},
    "outputs": [
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 80,
    "id": "8058ea58",
    "metadata": {},
    "outputs": [
